--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "fs": "^0.0.1-security",
-    "mongoose": "^6.6.1",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^6.6.1"
   }
 }
